# RAS_Midterm

./: pyproject.toml  run_simulation.py
config/: grid_configuration.json
sec/: .env
src/: draw_module.py  grid_module.py  mini_max_algo.py  mini_max_algo_v2.py  pydobot_port.py  symbol_detection.py  symbol_detection_old.py  test.py
